# modular

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  setup.sh
api/: .deploy_changelog.md  .dockerignore  .env.example  Dockerfile  README.md  SERVER.md  deploy.sh  docker-compose.yml  main.py  pyproject.toml  start-dev.sh  start.sh  worker.py
api/app/: __init__.py
api/db/: __init__.py  supabase_client.py
api/db/queries/: __init__.py  extract_links.py  extracts.py  libraries.py  papers.py  storage.py  vectors.py
api/dependencies/: __init__.py  auth.py
api/models/: __init__.py  job.py  library.py  paper.py
api/routes/: __init__.py  jobs.py  libraries.py  papers.py
api/scripts/: backfill_embeddings.py  similarity_playground.py
api/services/extract/: __init__.py  claims.py  handler.py  methods.py  observations.py  test_claims.py  test_methods.py  test_observations.py  utils.py
api/services/jobs/: README.md  __init__.py  handlers.py  queue.py
api/services/link/: __init__.py  claim2claim.py  claim2claim_pairwise.py  claim2observation.py  create_lithium_with_batch_links.py  create_lithium_with_pairwise_links.py  db_utils.py  handler.py  linking_comparison_results.csv  links_batch_20251128_114819.csv  links_batch_20251128_123615.csv  links_batch_20251128_193758.csv  links_pairwise_20251128_114839.csv  links_pairwise_20251128_123758.csv  links_pairwise_20251128_194035.csv  method_selector.py  queue.py  test_claim2claim.py  test_claim2observation.py  test_compare_approaches.py  test_method_selector.py
api/services/papers/: storage.py  (+1 more)
(+72 files in other folders)
